--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,7 +28,7 @@ jobs:
       run: git config --global --add safe.directory /__w/csi-baremetal-operator/csi-baremetal-operator
 
     - name: Check out code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
 
     - name: Set GOPROXY
       env:
@@ -36,9 +36,35 @@ jobs:
       run: go env -w GOPROXY=$GOPROXY
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v2
       with:
         go-version: '1.21.3'
+
+    - name: Set go_version variable 
+      run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
+
+    - name: Set GOROOT
+      env:
+        GOROOT: /usr/local/go
+      run: go env -w GOROOT=$GOROOT  
+
+    - name: Load dep cache
+      uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: go-dep-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}
+        restore-keys: go-dep-${{ env.go_version }}-
+          
+    - name: Load build and linter cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/.cache/golangci-lint
+        key: go-build-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/pkg') }}
+        restore-keys: |
+          go-build-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}
+          go-build-${{ env.go_version }}-
         
     - name: Get dependencies
       run:  go mod download
