--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -52,7 +52,7 @@ jobs:
       run:  go mod download
         
     - name: Lint code
-      run: GOGC=300 GOROOT=/usr/local/go make lint-code
+      run: GOGC=300 GOROOT=/__t/go/1.21.3/x64 make lint-code
 
     - name: Lint chart
       run: make lint-operator-chart
