--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -36,23 +36,36 @@ jobs:
       run: go env -w GOPROXY=$GOPROXY
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4
       with:
         go-version: '1.21.3'
 
     - name: Set go_version variable 
       run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
 
-    - name: Set GOROOT
-      env:
-        GOROOT: /usr/local/go
-      run: go env -w GOROOT=$GOROOT  
+    - name: Load dep cache
+      uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: go-dep-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}
+        restore-keys: go-dep-${{ env.go_version }}-
+          
+    - name: Load build and linter cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/.cache/golangci-lint
+        key: go-build-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/pkg') }}
+        restore-keys: |
+          go-build-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}
+          go-build-${{ env.go_version }}-
         
     - name: Get dependencies
       run:  go mod download
         
     - name: Lint code
-      run: GOGC=300 GOROOT=/__t/go/1.21.3/x64 make lint-code
+      run: GOGC=300 make lint-code
 
     - name: Lint chart
       run: make lint-operator-chart
