--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 env:
   go_version: '1.21.3'
-  golangci_version: '1.55.2'
+  golangci_version: '1.37.0'
 jobs:
   lint-test:
     name: Validate code and build it
@@ -36,9 +36,12 @@ jobs:
       run: go env -w GOPROXY=$GOPROXY
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v2
       with:
         go-version: '1.21.3'
+
+    - name: Set go_version variable 
+      run: echo "go_version=`echo "$(go version)" | grep -oE '[0-9]{1,}\.[0-9]{1,}\.[0-9]{1,}'`" >> $GITHUB_ENV
 
     - name: Load dep cache
       uses: actions/cache@v2
@@ -53,7 +56,6 @@ jobs:
         path: |
           ~/.cache/go-build
           ~/.cache/golangci-lint
-          ~/go/pkg/mod
         key: go-build-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}-${{ hashFiles('**/pkg') }}
         restore-keys: |
           go-build-${{ env.go_version }}-${{ hashFiles('**/go.sum') }}
