--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,6 +16,61 @@ linters-settings:
     # golint developers mention that this is imperfection. https://github.com/golang/lint/blob/master/lint.go#L376
     # To prevent this checking set min-confidence level to 0.3
     min-confidence: 0.3
+  depguard:
+    rules:
+      main:
+        files:
+          - $all
+          - "!$test"
+        allow:
+          - $gostd
+          - github.com/antonfisher/nested-logrus-formatter
+          - github.com/container-storage-interface/spec/lib/go/csi
+          - github.com/dell/csi-baremetal-operator/api/v1
+          - github.com/dell/csi-baremetal-operator/api/v1/components
+          - github.com/dell/csi-baremetal-operator/pkg/validator/models
+          - github.com/dell/csi-baremetal-operator/pkg/validator/rbac
+          - github.com/fsnotify/fsnotify
+          - github.com/golang/protobuf/ptypes/wrappers
+          - github.com/google/uuid
+          - github.com/grpc-ecosystem/go-grpc-prometheus
+          - github.com/prometheus/client_golang/prometheus
+          - github.com/sirupsen/logrus
+          - github.com/stretchr/testify/assert
+          - github.com/stretchr/testify/mock
+          - github.com/viney-shih/go-lock
+          - k8s.io/api/apps/v1
+          - k8s.io/api/core/v1
+          - k8s.io/api/storage/v1
+          - k8s.io/apimachinery/pkg/api/errors
+          - k8s.io/apimachinery/pkg/api/meta
+          - k8s.io/apimachinery/pkg/api/resource
+          - k8s.io/apimachinery/pkg/apis/meta/v1
+          - k8s.io/apimachinery/pkg/runtime
+          - k8s.io/apimachinery/pkg/types
+          - k8s.io/client-go/kubernetes
+          - k8s.io/client-go/plugin/pkg/client/auth/gcp
+          - k8s.io/client-go/rest
+          - k8s.io/client-go/tools/record
+          - k8s.io/client-go/tools/reference
+          - k8s.io/client-go/util/retry
+          - k8s.io/client-go/util/workqueue
+          - k8s.io/kube-scheduler/extender/v1
+          - k8s.io/utils/keymutex
+          - sigs.k8s.io/controller-runtime
+          - sigs.k8s.io/controller-runtime/pkg/cache
+          - sigs.k8s.io/controller-runtime/pkg/client
+          - sigs.k8s.io/controller-runtime/pkg/controller
+          - sigs.k8s.io/controller-runtime/pkg/event
+          - sigs.k8s.io/controller-runtime/pkg/handler
+          - sigs.k8s.io/controller-runtime/pkg/manager
+          - sigs.k8s.io/controller-runtime/pkg/predicate
+          - sigs.k8s.io/controller-runtime/pkg/source
+      test:
+        files:
+          - "$test"
+        allow:
+          - $gostd
 
 linters:
   # please, do not use `enable-all`: it is deprecated and will be removed soon.
