--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,8 +28,28 @@ linters-settings:
           - github.com/container-storage-interface/spec/lib/go/csi
           - github.com/dell/csi-baremetal-operator/api/v1
           - github.com/dell/csi-baremetal-operator/api/v1/components
+          - github.com/dell/csi-baremetal-operator/pkg
+          - github.com/dell/csi-baremetal-operator/pkg/feature/security_verifier
+          - github.com/dell/csi-baremetal-operator/pkg/feature/security_verifier/models
+          - github.com/dell/csi-baremetal-operator/pkg/validator
           - github.com/dell/csi-baremetal-operator/pkg/validator/models
           - github.com/dell/csi-baremetal-operator/pkg/validator/rbac
+          - github.com/dell/csi-baremetal-operator/pkg/common
+          - github.com/dell/csi-baremetal-operator/pkg/constant
+          - github.com/dell/csi-baremetal-operator/pkg/nodeoperations
+          - github.com/dell/csi-baremetal-operator/pkg/patcher
+          - github.com/dell/csi-baremetal-operator/controllers
+          - github.com/dell/csi-baremetal-operator/pkg/acrvalidator
+          - github.com/dell/csi-baremetal/pkg/events/recorder
+          - github.com/dell/csi-baremetal/pkg/crcontrollers/node/common
+          - github.com/dell/csi-baremetal/pkg/eventing
+          - github.com/dell/csi-baremetal/pkg/events
+          - github.com/dell/csi-baremetal/api/v1/acreservationcrd
+          - github.com/dell/csi-baremetal/api/v1/availablecapacitycrd
+          - github.com/dell/csi-baremetal/api/v1/drivecrd
+          - github.com/dell/csi-baremetal/api/v1/lvgcrd
+          - github.com/dell/csi-baremetal/api/v1/nodecrd
+          - github.com/dell/csi-baremetal/api/v1/volumecrd
           - github.com/fsnotify/fsnotify
           - github.com/golang/protobuf/ptypes/wrappers
           - github.com/google/uuid
@@ -39,8 +59,12 @@ linters-settings:
           - github.com/stretchr/testify/assert
           - github.com/stretchr/testify/mock
           - github.com/viney-shih/go-lock
+          - github.com/openshift/api/config/v1
+          - github.com/openshift/secondary-scheduler-operator/pkg/apis/secondaryscheduler/v1
+          - github.com/dell/csi-baremetal-operator/pkg/constant
           - k8s.io/api/apps/v1
           - k8s.io/api/core/v1
+          - k8s.io/api/rbac/v1
           - k8s.io/api/storage/v1
           - k8s.io/apimachinery/pkg/api/errors
           - k8s.io/apimachinery/pkg/api/meta
@@ -48,6 +72,9 @@ linters-settings:
           - k8s.io/apimachinery/pkg/apis/meta/v1
           - k8s.io/apimachinery/pkg/runtime
           - k8s.io/apimachinery/pkg/types
+          - k8s.io/apimachinery/pkg/labels
+          - k8s.io/apimachinery/pkg/util/intstr
+          - k8s.io/apimachinery/pkg/api/equality
           - k8s.io/client-go/kubernetes
           - k8s.io/client-go/plugin/pkg/client/auth/gcp
           - k8s.io/client-go/rest
@@ -57,6 +84,7 @@ linters-settings:
           - k8s.io/client-go/util/workqueue
           - k8s.io/kube-scheduler/extender/v1
           - k8s.io/utils/keymutex
+          - k8s.io/utils/pointer
           - sigs.k8s.io/controller-runtime
           - sigs.k8s.io/controller-runtime/pkg/cache
           - sigs.k8s.io/controller-runtime/pkg/client
@@ -66,6 +94,8 @@ linters-settings:
           - sigs.k8s.io/controller-runtime/pkg/manager
           - sigs.k8s.io/controller-runtime/pkg/predicate
           - sigs.k8s.io/controller-runtime/pkg/source
+          - sigs.k8s.io/controller-runtime/pkg/reconcile
+          - sigs.k8s.io/controller-runtime/pkg/log/zap
       test:
         files:
           - "$test"
