[Issue-193] Fixing lint issues
Signed-off-by: Katarzyna Kulpa <katarzyna.kulpa@dell.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -112,40 +112,34 @@ linters:
   disable-all: true
   enable:
     - bodyclose
-    - deadcode
     - depguard
     - dogsled
+    - dupl
     - errcheck
+    - exportloopref
     - funlen
     - gochecknoinits
     - gocognit
-  #  - goconst
+    - goconst
     - gocritic
     - gocyclo
     - gofmt
     - goimports
-    - golint
     - gosimple
+    - gosec
     - govet
     - ineffassign
-    - interfacer
     - lll
     - megacheck
     - misspell
-  #  - nakedret
-    - scopelint
+    - nakedret
     - staticcheck
-    - structcheck
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
     - whitespace
-    - maligned
     - prealloc
-    - dupl
-    - gosec
 
   # don't enable:
   # - gochecknoglobals Because of setupMgr and CrushVolumes // TODO - https://github.com/dell/csi-baremetal/issues/474
