[ISSUE-197] crd job annotation
Signed-off-by: rafalw82 <rafal.wegrzyn@dell.com>

--- a/charts/csi-baremetal-operator/templates/pre-upgrade-crds.yaml
+++ b/charts/csi-baremetal-operator/templates/pre-upgrade-crds.yaml
@@ -103,6 +103,10 @@ spec:
   activeDeadlineSeconds: 300
   template:
     metadata:
+      {{- with .Values.preUpgradeCRDsHooks.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       name: "{{.Release.Namespace}}-{{.Release.Name}}-csi-baremetal-pre-crds-job"
     spec:
       serviceAccountName: "{{.Release.Namespace}}-{{.Release.Name}}-csi-baremetal-pre-crds-sa"
