[ISSUE-206] Extend CRD/proto spec for SmartInfo Support
Signed-off-by: Andrzej Zukowski <andrzej.zukowski@dell.com>

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_drives.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_drives.yaml
@@ -72,6 +72,10 @@ spec:
       jsonPath: .spec.EncryptionProtocol
       name: Encryption Protocol
       type: string
+    - description: Smart Info data
+      jsonPath: .spec.SmartInfo
+      name: Smart Info
+      type: string
     name: v1
     schema:
       openAPIV3Schema:
@@ -128,6 +132,8 @@ spec:
                 format: int64
                 type: integer
               Slot:
+                type: string
+              SmartInfo:
                 type: string
               Status:
                 type: string
