[ISSUE-212] Remove SmartInfo from kubectl get drives output
Signed-off-by: Andrzej Zukowski <andrzej.zukowski@dell.com>

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_drives.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_drives.yaml
@@ -75,6 +75,7 @@ spec:
     - description: Smart Info data
       jsonPath: .spec.SmartInfo
       name: Smart Info
+      priority: 1
       type: string
     name: v1
     schema:
