--- a/.golangci.yml
+++ b/.golangci.yml
@@ -100,6 +100,8 @@ linters-settings:
           - sigs.k8s.io/controller-runtime/pkg/source
           - sigs.k8s.io/controller-runtime/pkg/reconcile
           - sigs.k8s.io/controller-runtime/pkg/log/zap
+          - sigs.k8s.io/controller-runtime/pkg/metrics/server
+          - sigs.k8s.io/controller-runtime/pkg/webhook
       test:
         files:
           - "$test"
