--- a/.golangci.yml
+++ b/.golangci.yml
@@ -88,7 +88,7 @@ linters-settings:
           - k8s.io/client-go/util/workqueue
           - k8s.io/kube-scheduler/extender/v1
           - k8s.io/utils/keymutex
-          - k8s.io/utils/pointer
+          - k8s.io/utils/ptr
           - sigs.k8s.io/controller-runtime
           - sigs.k8s.io/controller-runtime/pkg/cache
           - sigs.k8s.io/controller-runtime/pkg/client
