--- a/.golangci.yml
+++ b/.golangci.yml
@@ -88,7 +88,7 @@ linters-settings:
           - k8s.io/client-go/util/workqueue
           - k8s.io/kube-scheduler/extender/v1
           - k8s.io/utils/keymutex
-          - k8s.io/utils/pointer
+          - k8s.io/utils/ptr
           - sigs.k8s.io/controller-runtime
           - sigs.k8s.io/controller-runtime/pkg/cache
           - sigs.k8s.io/controller-runtime/pkg/client
@@ -100,6 +100,8 @@ linters-settings:
           - sigs.k8s.io/controller-runtime/pkg/source
           - sigs.k8s.io/controller-runtime/pkg/reconcile
           - sigs.k8s.io/controller-runtime/pkg/log/zap
+          - sigs.k8s.io/controller-runtime/pkg/metrics/server
+          - sigs.k8s.io/controller-runtime/pkg/webhook
       test:
         files:
           - "$test"
